# ai-re

./: .gitignore  MOCK_DPSS_SUMMARY.md  Makefile  README.md  SOLUTION_SUMMARY.md  docker-compose.yml  env.example  project_spec.md  pyproject.toml  requirements-dev.txt  test_project_setup.py
.cursor/rules/: code-review-rule.mdc  dev-rule.mdc  my-custom-rule.mdc  notion-rule.mdc
config/: config.yml  dialogue_context.yml  events.yml
docker/: Dockerfile.acceptance-test  acceptance-test-compose.yml
docs/: input_service_integration_test_plan.md  test_organization.md
docs/cicd/: remote_acceptance_testing_design.md
docs/design/: nlu.md
docs/test/: container_acceptance_test_plan.md  e2e_test_plan.md  event_bus_framework_api.md  input_service_api.md  integration_test_plan.md  test_organization.md
event_bus_framework/: README.md  interfaces.py  message_envelope.py  pyproject.toml
event_bus_framework/src/event_bus_framework/: __init__.py
event_bus_framework/src/event_bus_framework/adapters/: __init__.py  redis_streams.py
event_bus_framework/src/event_bus_framework/core/: constants.py  interfaces.py  logging.py  models.py
event_bus_framework/tests/integration/: test_redis_integration.py
event_bus_framework/tests/unit/: test_redis_streams.py
input-service/: Dockerfile  pyproject.toml  requirements.txt
input-service/src/input_service/: app.py  main.py  service.py  webhook_handler.py
input-service/tests/unit/: __init__.py  test_service.py  test_webhook_handler.py
libs/event_bus_framework/: MIGRATION_GUIDE.md  README.md  pyproject.toml
libs/event_bus_framework/examples/: simple_service.py
libs/event_bus_framework/src/event_bus_framework/: __init__.py  factory.py
libs/event_bus_framework/src/event_bus_framework/adapters/: __init__.py  redis_streams.py
libs/event_bus_framework/src/event_bus_framework/common/: __init__.py  config.py  events.py  logger.py
libs/event_bus_framework/src/event_bus_framework/core/: __init__.py  constants.py  exceptions.py  interfaces.py  logging.py  service_manager.py  subscription_manager.py  utils.py
libs/event_bus_framework/tests/unit/: test_config.py  test_core_exceptions.py  test_core_models.py  test_events.py  test_logger.py  test_redis_streams.py  test_service_manager.py  test_subscription_manager.py  test_utils.py
nlu-service/: IMPROVEMENTS.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  pyproject.toml  run.py  test_service.py
nlu-service/src/nlu_service/: __init__.py  config.py  factory.py  main.py  message_handlers.py  service_manager.py
nlu-service/src/nlu_service/core/: __init__.py  context_retriever.py  llm_client.py  nlu_processor.py  prompt_builder.py  response_validator.py
nlu-service/src/nlu_service/models/: __init__.py  dialogue_context_utils.py  schema_models.py  uar.py
nlu-service/tests/: test_context_retriever.py  test_event_subscription.py  test_llm_client.py  test_models.py  test_nlu_processor.py  test_prompt_builder.py  test_response_validator.py
scripts/: build_docker.sh  run_container_acceptance_tests.sh  run_tests.sh
services/input-service/: Dockerfile  README.md  pyproject.toml
services/input-service/src/input_service/: __init__.py  app.py  main.py  webhook_handler.py
services/input-service/tests/unit/: test_app.py
tests/: __init__.py  conftest.py  requirements.txt  test_interfaces.py  test_message_envelope.py
tests/acceptance/: __init__.py  test_container_data_persistence.py  test_container_orchestration.py  test_container_performance.py
tests/e2e/: __init__.py  test_api_workflow.py  test_input_service_e2e.py  test_service_health.py
tests/integration/: Dockerfile.test_runner  __init__.py  docker-compose.yml  test_input_service_integration.py  test_redis_integration.py  test_system_configuration.py
tools/: README.md  README_mock_dpss.md  demo_simulator.py  interactive_dialogue_simulator.py  mock_dpss_data.yml  mock_dpss_service.py  session_manager.py  sessions.yml  start_mock_dpss.sh  test_mock_dpss.py  test_new_features.py
tools/conversations/: demo_ecommerce_system.json  example_login_system.json
