[tool.poetry]
name = "ai-re"
version = "0.1.0"
description = "AI-RE 助手系统 - 容器化验收测试与开发环境"
authors = ["AI-RE Team <team@ai-re.com>"]
readme = "README.md"
packages = [
    {include = "tests"},
    {include = "libs"},
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.104.0"
uvicorn = ">=0.15.0"
redis = ">=4.5.0"
requests = ">=2.28.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
pytest-asyncio = ">=0.21.0"
black = ">=22.0.0"
isort = ">=5.10.0"
mypy = ">=0.900"
httpx = ">=0.24.0"

[tool.poetry.group.test.dependencies]
# Container acceptance testing dependencies
docker = ">=6.0.0"
psutil = ">=5.9.0"
fakeredis = ">=2.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "acceptance: marks tests as acceptance tests",
    "container: marks tests as container-based tests",
    "asyncio: marks tests as async"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 