[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[tool.poetry]
name = "my-project-devtools"
version = "0.1.0"
description = "Development tools for the monorepo."
authors = ["AI-RE Team <team@ai-re.com>"]
packages = [
    { include = "input_service", from = "input-service/src" },
    { include = "event_bus_framework", from = "libs/event_bus_framework/src" }
]

# The root-level pyproject manages only development & CI/CD tooling. Runtime
# dependencies belong to individual service-level pyprojects.

[tool.poetry.dependencies]
python = "^3.10"

# ---------------------------------------------------------------------------
# Dependency groups
# ---------------------------------------------------------------------------

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
ruff = "^0.4.0"
pytest = "^8.0.0"
requests = "^2.31.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.26.0"
isort = "^5.13.0"
mypy = "^1.8.0"
pydantic = "^2.7.0"
redis = "^5.0.0"
python-json-logger = "^2.0.0"
typing-extensions = "^4.11.0"
pyyaml = "^6.0.0"

[tool.poetry.group.test.dependencies]
docker = "^6.1.0"
psutil = "^5.9.8"
fakeredis = "^2.23.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "acceptance: marks tests as acceptance tests",
    "container: marks tests as container-based tests",
    "asyncio: marks tests as async"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 