# 将清华源设置为新的默认源，它将取代隐式的 PyPI 源
[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[tool.poetry]
name = "input-service"
version = "0.1.0"
description = "AI-RE 助手系统的统一外部消息入口"
authors = ["AI-RE Team <team@ai-re.com>"]
readme = "README.md"
packages = [{include = "input_service", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.68.0"
uvicorn = ">=0.15.0"
python-multipart = ">=0.0.5"
redis = ">=4.5.0"
requests = ">=2.28.0"
event-bus-framework = { path = "../libs/event_bus_framework", develop = true }

[tool.poetry.scripts]
input-service = "input_service.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
httpx = "^0.26.0" 