[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "event_bus_framework"
version = "0.1.0"
description = "An event bus framework based on Redis Streams for reliable event sourcing and messaging"
readme = "README.md"
requires-python = ">=3.9,<4.0"
license = {text = "MIT"}
authors = [
    {name = "AI-RE Team"}
]
dependencies = [
    "redis>=4.3.0",
    "pydantic>=2.0.0",
    "python-json-logger>=2.0.0",
    "typing-extensions>=4.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.900",
    "pytest-asyncio>=0.20.0",
    "fakeredis>=2.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.poetry.group.dev.dependencies]
fakeredis = "^2.29.0"

